--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,29 @@
     --Light-Grey: #313E51;
     --Dark-Navy: #F4F6FA;
     --Pure-White: #3B4D66;
+    & .welcome-sec, .container-qsp, .container-qr {
+        background-image: url(images/dark-theme-mobile-bg.svg);
+        background-repeat: no-repeat;
+    }
+    & .quiz-end-container {
+        & .inner-details {
+            background: var(--Navy, #3B4D66); 
+        }
+    }
+    & .topicSelection label button {
+        background: var(--Navy, #3B4D66);
+    }
+    & .answer {
+        & .spanSlice {
+
+            & .answerOptions {
+                background-color: #F4F6FA;
+            }
+        }
+    }
+    & .answer button {
+        background-color: #3B4D66;
+    }
 }
 
 body {
@@ -42,24 +65,6 @@ a {
     align-items: center;
     justify-content: end;
     gap: 16px;
-}
-.switchSide {
-    background-color: var(--Purple);
-    width: auto;
-    padding: 4px;
-    border-radius: 999px;
-    cursor: pointer;
-    & input {
-        visibility: hidden;
-    }
-    & label {
-        background-image: url(images/circle-switch.svg);
-        background-repeat: no-repeat;
-        width: 20px;
-        &:has(:checked) {
-            background-image: url(images/circle-switch.svg);
-        }
-    }
 }
 
 /* inner */
@@ -398,6 +403,13 @@ a {
         background-image: url(images/tablet-bg.svg);
         background-repeat: no-repeat;
     }
+    .dark-theme {
+        & .welcome-sec, .container-qsp, .container-qr {
+            width: 768px;
+            background-image: url(images/dark-theme-tablet-bg.svg);
+            background-repeat: no-repeat;
+        }
+    }
     .inner{
         margin: 0 auto;
         width: 768px;
@@ -520,6 +532,13 @@ a {
         width: 1440px;
         background-image: url(images/pc-bg.svg);
         background-repeat: no-repeat;
+    }
+    .dark-theme {
+        & .welcome-sec{
+            width: 1440px;
+            background-image: url(images/dark-theme-web-bg.svg);
+            background-repeat: no-repeat;
+        }
     }
     .inner{
         margin: 0 auto;
